--- a/components/Buttons/Button/Button.module.css
+++ b/components/Buttons/Button/Button.module.css
@@ -15,6 +15,10 @@
 	justify-items: center;
 }
 
+.buttonPrimary {
+	background: var(--primary);
+}
+
 .button:active {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	filter: brightness(0.9);
