--- a/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
+++ b/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
@@ -4,8 +4,8 @@
 	display: grid;
 
 	width: calc(100% - 80px);
-	margin-top: 110px;
-	padding: 40px;
+	margin-top: 80px;
+	padding: 20px 40px;
 	justify-items: center;
 	gap: 20px;
 	grid-template-columns: 1fr 3fr;
@@ -38,6 +38,7 @@
 @media (max-width: 1024px) {
 	.catalogBlock {
 		width: calc(100% - 40px);
+		margin-top: 70px;
 		padding: 20px;
 		gap: 15px;
 		grid-template-columns: 1.3fr 2.7fr;
