--- a/components/Common/Footer/Footer.module.css
+++ b/components/Common/Footer/Footer.module.css
@@ -2,65 +2,70 @@
 	display: grid;
 	align-items: center;
 
-	width: calc(100% - 140px);
-	height: fit-content;
-	padding: 40px 70px 20px 70px;
+	width: calc(100% - 160px);
+	padding: 40px 80px;
 
-	background-color: var(--white);
-	filter: drop-shadow(0 5px 7px rgba(0, 0, 0, 0.1));
+	background: var(--white);
 	gap: 40px;
+	grid-template-columns: auto auto auto 1fr;
 }
 
-.footerDiv {
-	display: grid;
-	grid-template-columns: 1fr auto auto;
-	gap: 20px;
+.footer > h1,
+.footerLink > h1 {
+	color: var(--primary);
+
+	font-weight: 500;
 }
 
-.name {
-	cursor: default !important;
-
-	color: var(--darkLight) !important;
-}
-
-.footerDiv > h1 {
+.footerLink {
 	cursor: pointer;
-	transition-duration: 500ms;
-
-	color: var(--darkLight);
 }
 
-.footerDiv > h1:active {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.footerLink > h1 {
+	transition-duration: 500ms;
+}
 
+.footerLink:active > h1 {
 	color: var(--second);
 }
 
-@media (min-width: 1024px) {
-	.footerDiv > h1:hover {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.bananaLink {
+	justify-self: end;
+}
 
+@media (min-width: 1024px) {
+	.footerLink:hover > h1 {
 		color: var(--second);
 	}
 }
 
 @media (max-width: 1024px) {
 	.footer {
-		width: calc(100% - 100px);
-		padding: 30px 50px 15px 50px;
 		gap: 30px;
+
+		width: calc(100% - 120px);
+		padding: 30px 60px;
+	}
+}
+
+@media (max-width: 800px) {
+	.footer {
+		gap: 20px;
+
+		width: calc(100% - 80px);
+		padding: 20px 40px;
+		grid-template-columns: auto;
+	}
+
+	.bananaLink {
+		margin-top: 20px;
+		justify-self: start;
 	}
 }
 
 @media (max-width: 580px) {
 	.footer {
 		width: calc(100% - 40px);
-		padding: 20px 20px 10px 20px;
-		grid-template-columns: auto;
-		gap: 20px;
-	}
-
-	.footerDiv {
-		grid-template-columns: auto;
+		padding: 20px;
 	}
 }
