--- a/components/ProductsComponents/ProductInfo/ProductInfo.module.css
+++ b/components/ProductsComponents/ProductInfo/ProductInfo.module.css
@@ -3,7 +3,7 @@
 	justify-items: center;
 
 	width: calc(100% - 160px);
-	margin-top: 110px;
+	margin-top: 80px;
 	padding: 40px 80px;
 	gap: 40px;
 }
@@ -16,7 +16,7 @@
 	height: fit-content;
 	padding: 15px 15px 40px 15px;
 
-	border-radius: 15px;
+	border-radius: 5px;
 	background: var(--white);
 }
 
@@ -24,7 +24,7 @@
 	display: grid;
 
 	width: 100%;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: 1fr 3fr;
 	gap: 20px;
 }
 
@@ -46,7 +46,21 @@
 }
 
 .productName {
+	display: grid;
+
+	width: 100%;
+
 	color: var(--primary) !important;
+	grid-template-columns: 1fr auto;
+}
+
+.productPrice,
+.productName > span {
+	color: var(--second);
+}
+
+.productPrice {
+	display: none;
 }
 
 .productCategory {
@@ -60,14 +74,20 @@
 }
 
 @media (max-width: 1400px) {
+	.productInfo {
+		width: calc(100% - 120px);
+		padding: 40px 60px;
+	}
+
 	.mainInfoDiv {
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: 1fr 2fr;
 	}
 }
 
 @media (max-width: 1024px) {
 	.productInfo {
 		width: calc(100% - 80px);
+		margin-top: 70px;
 		padding: 30px 40px;
 		gap: 30px;
 	}
@@ -87,6 +107,16 @@
 
 	.mainInfoDiv {
 		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.productName > span {
+		display: none;
+	}
+
+	.productPrice {
+		display: grid;
+
+		margin-bottom: 10px;
 	}
 }
 
@@ -109,5 +139,9 @@
 
 	.mainInfoDiv > div {
 		gap: 20px;
+	}
+
+	.productPrice {
+		margin: 20px 0 0 0;
 	}
 }
