--- a/components/CatalogComponents/Sidebar/Sidebar.module.css
+++ b/components/CatalogComponents/Sidebar/Sidebar.module.css
@@ -53,7 +53,7 @@
 	display: grid;
 
 	height: fit-content;
-	margin-top: 5px;
+	margin: 5px 0;
 	padding-left: 10px;
 	gap: 10px;
 }
@@ -79,5 +79,11 @@
 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 		color: var(--second) !important;
+	}
+}
+
+@media (max-width: 1024px) {
+	.sidebar {
+		display: none;
 	}
 }
