--- a/page_components/MainPage/MainPage.module.css
+++ b/page_components/MainPage/MainPage.module.css
@@ -30,3 +30,9 @@
 		margin: 20px 20px 0 20px !important;
 	}
 }
+
+@media (max-width: 300px) {
+	.productTitle {
+		margin: 20px 10px 0 10px !important;
+	}
+}
