--- a/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
+++ b/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
@@ -20,12 +20,6 @@
 	gap: 20px;
 }
 
-.totalProducts {
-	color: var(--darkLight) !important;
-
-	font-weight: 500;
-}
-
 @media (max-width: 1400px) {
 	.catalogBlock {
 		width: calc(100% - 60px);
@@ -41,20 +35,23 @@
 		margin-top: 70px;
 		padding: 20px;
 		gap: 15px;
-		grid-template-columns: 1.3fr 2.7fr;
-	}
-}
-
-@media (max-width: 800px) {
-	.catalogBlock {
 		grid-template-columns: 1fr;
 	}
 }
 
 @media (max-width: 580px) {
 	.catalogBlock {
-		width: calc(100% - 20px);
-		padding: 10px;
+		width: calc(100% - 30px);
+		padding: 20px 15px;
 		gap: 20px;
+	}
+}
+
+@media (max-width: 300px) {
+	.catalogBlock {
+		width: calc(100% - 20px);
+		margin-top: 55px;
+		padding: 15px 10px;
+		gap: 15px;
 	}
 }
