--- a/components/Common/Htag/Htag.module.css
+++ b/components/Common/Htag/Htag.module.css
@@ -104,27 +104,52 @@
 
 @media (max-width: 300px) {
 	.xxxl {
-		font-size: 40px;
-	}
-
-	.xxl {
 		font-size: 32px;
 	}
 
+	.xxl {
+		font-size: 24px;
+	}
+
 	.xl {
-		font-size: 22px;
-		font-weight: 700;
+		font-size: 20px;
 	}
 
 	.l {
-		font-size: 18px;
+		font-size: 16px;
 	}
 
 	.m {
-		font-size: 14px;
+		font-size: 12px;
 	}
 
 	.s {
 		font-size: 10px;
+	}
+}
+
+@media (max-width: 200px) {
+	.xxxl {
+		font-size: 24px;
+	}
+
+	.xxl {
+		font-size: 20px;
+	}
+
+	.xl {
+		font-size: 16px;
+	}
+
+	.l {
+		font-size: 14px;
+	}
+
+	.m {
+		font-size: 10px;
+	}
+
+	.s {
+		font-size: 8px;
 	}
 }
