--- a/components/Common/Spinner/Spinner.module.css
+++ b/components/Common/Spinner/Spinner.module.css
@@ -4,22 +4,12 @@
 
 	animation: spin 1s linear infinite;
 
-	border: 5px solid var(--background);
-	border-top: 5px solid var(--primary);
+	border: 5px solid var(--background) !important;
+	border-top: 5px solid var(--primary) !important;
 	border-radius: 50%;
 }
 
 @keyframes spin {
 	0% { transform: rotate(0deg); }
 	100% { transform: rotate(360deg); }
-}
-
-@media (max-width: 580px) {
-	.spinner {
-		width: 30px;
-		height: 30px;
-
-		border: 4px solid var(--lighter);
-		border-top: 4px solid var(--second);
-	}
 }
