--- a/components/HeaderComponents/HeaderMob/HeaderMob.module.css
+++ b/components/HeaderComponents/HeaderMob/HeaderMob.module.css
@@ -2,8 +2,6 @@
 	position: fixed;
 	z-index: 12;
 
-	align-items: center;
-
 	width: calc(100% - 40px);
 	padding: 15px 20px;
 
@@ -13,7 +11,7 @@
 
 .headerContent {
 	display: grid;
-	align-items: center;
+	align-items: start;
 	grid-template-columns: auto 1fr auto;
 	gap: 10px;
 }
@@ -23,6 +21,9 @@
 }
 
 .headerTitle {
+	word-break: break-word;
+	hyphens: auto;
+
 	color: var(--primary);
 }
 
@@ -57,7 +58,7 @@
 
 .headerDiv {
 	display: grid;
-	grid-template-rows: repeat(5, auto) 1fr;
+	grid-template-rows: repeat(6, auto) 1fr;
 
 	width: 100%;
 	gap: 40px;
@@ -66,5 +67,32 @@
 @media (min-width: 1024px) {
 	.header {
 		display: none;
+	}
+}
+
+@media (max-width: 300px) {
+	.header {
+		width: calc(100% - 20px);
+		padding: 10px;
+	}
+
+	.headerButton {
+		width: 35px;
+		height: 35px;
+	}
+
+	.headerButton > svg {
+		width: 20px;
+	}
+
+	.headerDiv {
+		gap: 20px;
+	}
+}
+
+@media (max-width: 200px) {
+	.headerContent {
+		grid-template-columns: auto 1fr;
+		justify-items: end;
 	}
 }
