--- a/components/HeaderComponents/HeaderWeb/HeaderWeb.module.css
+++ b/components/HeaderComponents/HeaderWeb/HeaderWeb.module.css
@@ -22,6 +22,8 @@
 	display: grid;
 	align-items: center;
 
+	width: fit-content;
+
 	cursor: pointer;
 	transition-duration: 500ms;
 	grid-template-columns: auto 1fr;
