update sidebar adaptive

--- a/components/FiltersComponens/FiltersBar/FiltersBar.module.css
+++ b/components/FiltersComponens/FiltersBar/FiltersBar.module.css
@@ -92,6 +92,12 @@
 }
 
 @media (max-width: 300px) {
+	.filtersBar {
+		width: calc(100% - 20px);
+		padding: 10px;
+		gap: 10px;
+	}
+
 	.filtersName {
 		font-size: 10px;
 	}
