--- a/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
+++ b/components/CatalogComponents/CatalogBlock/CatalogBlock.module.css
@@ -9,6 +9,7 @@
 	justify-items: center;
 	gap: 20px;
 	grid-template-columns: 1fr 3fr;
+	height: fit-content;
 }
 
 .catalogDiv {
@@ -24,7 +25,6 @@
 	.catalogBlock {
 		width: calc(100% - 60px);
 		padding: 30px;
-		gap: 20px;
 		grid-template-columns: 1.2fr 2.8fr;
 	}
 }
@@ -35,7 +35,20 @@
 		margin-top: 70px;
 		padding: 20px;
 		gap: 15px;
+	}
+
+	.catalogDiv {
+		gap: 15px;
+	}
+}
+
+@media (max-width: 800px) {
+	.catalogBlock {
 		grid-template-columns: 1fr;
+	}
+
+	.totalProductsDiv {
+		display: none;
 	}
 }
 
@@ -43,7 +56,6 @@
 	.catalogBlock {
 		width: calc(100% - 30px);
 		padding: 20px 15px;
-		gap: 20px;
 	}
 }
 
@@ -52,6 +64,5 @@
 		width: calc(100% - 20px);
 		margin-top: 55px;
 		padding: 15px 10px;
-		gap: 15px;
 	}
 }
