--- a/components/ProductsComponents/ProductBuyBlock/ProductBuyBlock.module.css
+++ b/components/ProductsComponents/ProductBuyBlock/ProductBuyBlock.module.css
@@ -4,98 +4,29 @@
 	width: 30%;
 	grid-template-columns: 1fr auto;
 	gap: 10px;
+	grid-template-areas: "buyButton cartController favoriteButton";
+}
+
+.cartBlock {
+	width: 40%;
+	grid-template-columns: 1fr auto auto;
+}
+
+.buyButton {
+	grid-area: buyButton;
 }
 
 .favoriteButton {
-	position: relative;
-
-	display: grid;
-	overflow: hidden;
-	align-items: center;
-
-	width: 50px;
-	height: 50px;
-	padding: 0;
-
-	cursor: pointer;
-	transition-duration: 500ms;
-
-	border: none;
-
-	border-radius: 5px;
-	outline: none;
-	background: none;
-	justify-items: center;
-}
-
-.favoriteButton > div {
-	width: 100%;
-	height: 100%;
-
-	transition-duration: 500ms;
-
-	opacity: 0.15;
-	background: var(--second);
-}
-
-.favoriteButton > svg {
-	position: absolute;
-
-	width: 30px;
-	fill: var(--second);
-
-	transition-duration: 500ms;
-}
-
-.activeButton > div {
-	opacity: 1;
-}
-
-.activeButton > svg {
-	fill: var(--white);
-}
-
-.favoriteButton:active > div {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	opacity: 1 !important;
-}
-
-.favoriteButton:active > svg {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	fill: var(--white);
-}
-
-.activeButton:active {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	filter: brightness(0.9);
-}
-
-@media (min-width: 1024px) {
-	.favoriteButton:hover > div {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		opacity: 1 !important;
-	}
-
-	.favoriteButton:hover > svg {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		fill: var(--white);
-	}
-
-	.activeButton:hover {
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-		filter: brightness(0.9);
-	}
+	grid-area: favoriteButton;
 }
 
 @media (max-width: 1400px) {
 	.productBuyBlock {
 		width: 40%;
+	}
+
+	.cartBlock {
+		width: 60%;
 	}
 }
 
@@ -103,10 +34,21 @@
 	.productBuyBlock {
 		width: 50%;
 	}
+
+	.cartBlock {
+		width: 80%;
+	}
 }
 
 @media (max-width: 800px) {
 	.productBuyBlock {
 		width: 100%;
+	}
+
+	.cartBlock {
+		grid-template-columns: 1fr auto;
+		grid-template-areas:
+			"buyButton favoriteButton"
+			"cartController cartController";
 	}
 }
