--- a/components/Buttons/Button/Button.module.css
+++ b/components/Buttons/Button/Button.module.css
@@ -15,7 +15,7 @@
 	justify-items: center;
 }
 
-.heightCart {
+.heightButton {
 	height: 40px;
 }
 
@@ -41,13 +41,13 @@
 }
 
 .spinner {
-	width: 50px;
-	height: 50px;
+	width: 10px;
+	height: 10px;
 
 	animation: spin 1s linear infinite;
 
-	border: 4px solid var(--white);
-	border-top: 4px solid var(--second);
+	border: 2px solid var(--white);
+	border-top: 2px solid var(--second);
 	border-radius: 50%;
 }
 
@@ -68,7 +68,7 @@
 		padding: 5px 10px;
 	}
 
-	.heightCart {
+	.heightButton {
 		height: 35px;
 		padding: 0;
 	}
