--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -60,6 +60,7 @@ a {
 	--darkLight: #A6A6A6;
 	--background: #F7F7F7;
 	--error: #FF1500;
+	--errorBackground: #FF857A4A;
 	--banana: #FFC803;
 	--font-family: 'Roboto', sans-serif;
 }
