--- a/components/Common/Modal/Modal.module.css
+++ b/components/Common/Modal/Modal.module.css
@@ -1,6 +1,6 @@
 .modal {
 	position: fixed;
-	z-index: 10002;
+	z-index: 100;
 	top: 0;
 	left: 0;
 
@@ -22,25 +22,23 @@
 .modalContent {
 	display: grid;
 	align-items: center;
-	justify-items: center;
 
-	padding: 25px;
+	padding: 20px;
 
 	border-radius: 5px;
+	outline: 1px solid var(--light);
 	background: var(--white);
-	filter: drop-shadow(0 20px 13px rgb(0 0 0 / 0.03)) drop-shadow(0 8px 5px rgb(0 0 0 / 0.08));
+	justify-items: center;
 }
 
 @media (max-width: 580px) {
 	.modalContent {
-		padding: 20px;
+		padding: 15px;
 	}
 }
 
 @media (max-width: 300px) {
 	.modalContent {
-		padding: 15px;
-
-		border-radius: 5px;
+		padding: 10px;
 	}
 }
