--- a/components/Common/Modal/Modal.module.css
+++ b/components/Common/Modal/Modal.module.css
@@ -21,7 +21,10 @@
 
 .modalContent {
 	display: grid;
+	overflow-y: auto;
 	align-items: center;
+
+	max-height: 50vh;
 
 	padding: 20px;
 
@@ -29,6 +32,10 @@
 	outline: 1px solid var(--light);
 	background: var(--white);
 	justify-items: center;
+}
+
+.modalContent::-webkit-scrollbar {
+	width: 2px !important;
 }
 
 @media (max-width: 580px) {
