--- a/components/ProfileComponents/ProfileInfo/ProfileInfo.module.css
+++ b/components/ProfileComponents/ProfileInfo/ProfileInfo.module.css
@@ -1,10 +1,12 @@
 .profileInfo {
 	display: grid;
 
-	width: calc(100% - 140px);
+	width: calc(100% - 80px);
+	height: fit-content;
+	margin: 100px 0 20px 0;
+	padding: 20px 40px;
 
-	margin: 140px 70px 40px 70px !important;
-	gap: 20px;
+	gap: 40px;
 
 	justify-items: left;
 }
@@ -17,17 +19,29 @@
 
 .nameDiv {
 	display: grid;
+
+	width: 100%;
 	gap: 5px;
 }
 
 .name {
+	display: grid;
+	align-items: start;
+
+	width: 100%;
+
 	color: var(--primary);
 
 	font-weight: 600;
+	grid-template-columns: 1fr auto;
+	gap: 20px;
 }
 
 .role {
-	color: var(--darkLight);
+	opacity: 0.5;
+	color: var(--primary);
+
+	font-weight: 500;
 }
 
 .profileInfoDiv {
@@ -58,21 +72,38 @@
 	color: var(--darkLight);
 }
 
+@media (max-width: 1400px) {
+	.profileInfo {
+		width: calc(100% - 60px);
+		padding: 30px;
+	}
+}
+
 @media (max-width: 1024px) {
 	.profileInfo {
-		width: calc(100% - 100px);
-		margin: 140px 50px 40px 50px !important;
+		width: calc(100% - 40px);
+		margin-top: 80px;
+		padding: 20px;
 	}
 }
 
 @media (max-width: 580px) {
 	.profileInfo {
-		width: calc(100% - 40px);
-		margin: 140px 20px 40px 20px !important;
-		gap: 15px;
+		width: calc(100% - 30px);
+		margin-bottom: 10px;
+		padding: 20px 15px;
+		gap: 30px;
 	}
 
 	.profileInfoDiv {
 		padding: 15px 0;
+	}
+}
+
+@media (max-width: 300px) {
+	.profileInfo {
+		width: calc(100% - 20px);
+		margin-top: 65px;
+		padding: 15px 10px;
 	}
 }
