--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,9 +57,10 @@ a {
 	--white: #FFF;
 	--dark: #252525;
 	--light: #F3F0E9;
+	--lightSecond: #FDF2E3;
 	--darkLight: #A6A6A6;
 	--background: #F7F7F7;
-	--error: #FF1500;
+	--error: #FF3724;
 	--errorBackground: #FF857A4A;
 	--banana: #FFC803;
 	--font-family: 'Roboto', sans-serif;
